# moai-studio

./: .gitignore  2026-04-11-215533-command-messagemoaiprojectcommand-message.txt  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  Cargo.toml  DESIGN.v4.md  LICENSE  NEXT-STEPS.md  README.md  REFERENCES.md
.claude/: settings.json
core/: Cargo.toml
core/crates/moai-claude-host/src/: error.rs  lib.rs  process.rs
core/crates/moai-claude-host/tests/: process_test.rs
core/crates/moai-core/src/: lib.rs
core/crates/moai-ffi/: Cargo.toml  build.rs
core/crates/moai-ffi/src/: lib.rs  workspace.rs
core/crates/moai-ffi/tests/: bridge_basic.rs
core/crates/moai-fs/: Cargo.toml
core/crates/moai-fs/src/: lib.rs
core/crates/moai-fs/tests/: watch_publish.rs
core/crates/moai-git/: Cargo.toml
core/crates/moai-git/src/: lib.rs  worktree.rs
core/crates/moai-hook-http/: Cargo.toml
core/crates/moai-hook-http/src/: error.rs  lib.rs  server.rs
core/crates/moai-hook-http/tests/: hook_test.rs
core/crates/moai-ide-server/: Cargo.toml
core/crates/moai-ide-server/src/: auth.rs  config.rs  lib.rs  server.rs
core/crates/moai-integration-tests/: Cargo.toml
core/crates/moai-integration-tests/tests/: config_generation.rs  subprocess_stream.rs
core/crates/moai-plugin-installer/: Cargo.toml
core/crates/moai-plugin-installer/src/: lib.rs
core/crates/moai-store/: Cargo.toml
core/crates/moai-store/migrations/: V2__workspaces_expand.sql
core/crates/moai-store/src/: lib.rs  state.rs  workspace.rs
core/crates/moai-store/tests/: state_machine.rs  workspace_crud.rs
core/crates/moai-stream-json/: Cargo.toml
core/crates/moai-stream-json/src/: lib.rs  message.rs
core/crates/moai-stream-json/tests/: codec_test.rs  parse_test.rs
core/crates/moai-supervisor/: Cargo.toml
core/crates/moai-supervisor/src/: lib.rs  lifecycle.rs
core/crates/moai-supervisor/tests/: multi_workspace.rs  restore_from_store.rs
crates/moai-claude-host/: Cargo.toml
crates/moai-claude-host/src/: lib.rs  monitor.rs  process.rs  spawn.rs  stdin.rs
crates/moai-claude-host/tests/: crash_to_error.rs  process_test.rs  spawn_args.rs
crates/moai-ide-server/: Cargo.toml
crates/moai-ide-server/src/: instance.rs  lib.rs  server.rs
crates/moai-ide-server/tests/: mcp_roundtrip.rs
crates/moai-search/: Cargo.toml
crates/moai-search/src/: cancel.rs  lib.rs  matcher.rs  session.rs  types.rs  walker.rs
crates/moai-stream-json/: Cargo.toml
crates/moai-stream-json/src/: codec.rs  decoder.rs  lib.rs
crates/moai-stream-json/tests/: codec_test.rs  decode_13_types.rs  parse_test.rs
crates/moai-studio-agent/: Cargo.toml
crates/moai-studio-agent/src/: control.rs  cost.rs  events.rs  filter.rs  instructions.rs  lib.rs  mission_control.rs  ring_buffer.rs  sse_ingest.rs  stream_ingest.rs  view.rs
crates/moai-studio-agent/src/quality/: engine.rs  history.rs  metrics.rs  score.rs
crates/moai-studio-app/: Cargo.toml
crates/moai-studio-app/src/: main.rs
crates/moai-studio-plugin-api/: Cargo.toml
crates/moai-studio-plugin-api/src/: lib.rs
crates/moai-studio-plugin-moai-adk/: Cargo.toml
crates/moai-studio-plugin-moai-adk/src/: lib.rs
crates/moai-studio-spec/: Cargo.toml
crates/moai-studio-spec/src/: branch.rs  lib.rs  watch.rs
crates/moai-studio-spec/src/parser/: ac.rs  ears.rs  frontmatter.rs  mod.rs  sprint_contract.rs
crates/moai-studio-spec/src/state/: ac_state.rs  kanban.rs  kanban_persist.rs  mod.rs  spec_index.rs  spec_record.rs
crates/moai-studio-spec/tests/: integration_test.rs
crates/moai-studio-terminal/: Cargo.toml  build.rs
crates/moai-studio-terminal/benches/: bench_key_echo_latency.rs  bench_pty_burst_read.rs
crates/moai-studio-terminal/examples/: ghostty-spike.rs
crates/moai-studio-terminal/src/: events.rs  lib.rs  libghostty_ffi.rs  link.rs  shell.rs  vt.rs  worker.rs
crates/moai-studio-terminal/src/pty/: mock.rs  mod.rs  unix.rs  windows.rs
crates/moai-studio-terminal/tests/: compile_fail.rs  libghostty_api_compat.rs  pty_contract.rs  pty_fd_cleanup.rs  worker_adaptive_buffer.rs
crates/moai-studio-terminal/tests/compile_fail/: conpty_spawn.rs  conpty_spawn.stderr
crates/moai-studio-ui/: Cargo.toml
crates/moai-studio-ui/benches/: pane_split.rs  tab_switch.rs
crates/moai-studio-ui/examples/: ghostty_spike.rs  wry_spike.rs
crates/moai-studio-ui/src/: lib.rs  shell_picker.rs  status_bar.rs  toolbar.rs  wizard.rs  workspace_color.rs  workspace_menu.rs
crates/moai-studio-ui/src/agent/: control_bar.rs  cost_panel_view.rs  dashboard_view.rs  detail_view.rs  instructions_graph_view.rs  mission_control_view.rs  mod.rs  timeline_view.rs
crates/moai-studio-ui/src/banners/: banner_stack.rs  banner_view.rs  mod.rs
crates/moai-studio-ui/src/design/: layout.rs  mod.rs  runtime.rs  tokens.rs  typography.rs
crates/moai-studio-ui/src/explorer/: config.rs  context_menu.rs  dnd.rs  git_status.rs  mod.rs  path.rs  search.rs  tree.rs  view.rs  watch.rs
crates/moai-studio-ui/src/git/: branch_switcher.rs  diff_viewer.rs  log_view.rs  merge_resolver.rs  mod.rs  stash_panel.rs
crates/moai-studio-ui/src/onboarding/: env.rs  mod.rs
crates/moai-studio-ui/src/palette/: fuzzy.rs  mod.rs  palette_view.rs  registry.rs  scrim.rs
crates/moai-studio-ui/src/panes/: constraints.rs  divider.rs  focus.rs  mod.rs  render.rs  splitter.rs  tree.rs
crates/moai-studio-ui/src/quality/: dimension_detail_view.rs  history_view.rs  mod.rs  quality_gate_view.rs  radar_chart_view.rs
crates/moai-studio-ui/src/search/: keymap.rs  mod.rs  navigation.rs  panel.rs  result_view.rs
crates/moai-studio-ui/tests/: integration_explorer_viewer.rs  integration_git.rs  integration_headless_resize.rs  integration_key_bindings.rs  integration_ms4_tab_crud.rs  integration_pane_core.rs  integration_render.rs  integration_search.rs  integration_tmux_nested.rs
crates/moai-studio-workspace/: Cargo.toml
crates/moai-studio-workspace/src/: lib.rs  panes_convert.rs  persistence.rs
crates/moai-studio-workspace/tests/: integration_persistence.rs  ms4_persistence_roundtrip.rs  panes_convert_roundtrip.rs
(+465 files in other folders)
