[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.93"

[workspace.dependencies]
tokio = { version = "1", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
thiserror = "2"
axum = "0.8"
# SPEC-V3-013 MS-3: UserSettings 영속화 경로 (platform-appropriate config dir)
dirs = "5"
# SPEC-V3-016 MS-1: Image decoding (PNG, JPEG, GIF, WebP, BMP, ICO)
image = "0.25"
# SPEC-V3-016 MS-2: EXIF metadata extraction (REQ-IV-040~045)
kamadak-exif = "0.6"
