[package]
name = "moai-search"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MoAI Studio — Global search engine (logic-only, GPUI-free)"

[dependencies]
ignore = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# Temporary directory creation for walker integration tests
tempfile = "3"
