[package]
name = "moai-stream-json"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util", "sync"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
futures = "0.3"
