[package]
name = "moai-studio-plugin-moai-adk"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MoAI Studio v3 — moai-adk 번들 플러그인 (SPEC/TRUST5/@MX/Hook events)"

[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Plugin API (trait 소비)
moai-studio-plugin-api = { path = "../moai-studio-plugin-api" }

# 기존 moai-core 재사용 (Hook events, SPEC 파싱)
moai-hook-http = { path = "../moai-hook-http" }
moai-store = { path = "../moai-store" }
