[package]
name = "moai-studio-spec"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MoAI Studio v3 — SPEC 파싱 + AC 상태 추적 + 파일 변경 감시 (SPEC-V3-009 MS-1)"

[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# USER-DECISION-SU-A: pulldown-cmark v0.13 채택 (viewer/markdown 과 동일)
pulldown-cmark = "0.13"

# SPEC 디렉터리 변경 감시 (AC-SU-4)
notify = "6"

# EARS / AC 표 추출 + branch 파싱 regex
regex = "1"

# 비동기 채널 (SpecWatcher debounce 채널)
tokio = { workspace = true, features = ["sync", "time", "rt"] }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }
