[package]
name = "moai-studio-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MoAI Studio v3 — libghostty-vt 기반 터미널 렌더 레이어"

[features]
default = []

[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util", "sync", "rt", "rt-multi-thread", "macros", "time"] }
arboard = "3.0"
portable-pty = "0.9"
regex = "1"

# SPEC-V3-002: libghostty-rs SHA pin (2026-04-20, AC-T-1)
# Zig 0.15.x 필수 — CI: mlugg/setup-zig@v2.2.1
libghostty-vt = { git = "https://github.com/Uzaaft/libghostty-rs", rev = "dfac6f3e8e7ff1567a7dead6639ef36c42e4f15a" }

[dev-dependencies]
trybuild = "1"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[example]]
name = "ghostty-spike"
path = "examples/ghostty-spike.rs"

[[bench]]
name = "bench_pty_burst_read"
harness = false

[[bench]]
name = "bench_key_echo_latency"
harness = false
