[package]
name = "moai-studio-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MoAI Studio v3 — GPUI 컴포넌트 라이브러리 (Sidebar, Toolbar, StatusBar, Panes)"

[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }

# Phase 1.1 (SPEC-V3-001 RG-V3-2): GPUI 의존성 추가
# crates.io 0.2.2 는 2025 년 배포. git main 은 core-foundation exact pin 충돌 발생.
# 안정 경로: 0.2.2 로 시작 → Phase 7+ 에서 Zed GPUI 최신으로 마이그레이션.
gpui = "0.2"

# Phase 1.6 (SPEC-V3-001 RG-V3-2): Sidebar 에 워크스페이스 리스트 렌더.
moai-studio-workspace = { path = "../moai-studio-workspace" }

# Phase 2 (SPEC-V3-002 T4): TerminalSurface — terminal crate 타입 소비.
# T3 완료 후 PtyEvent + RenderSnapshot re-export 가 활성화된다.
moai-studio-terminal = { path = "../moai-studio-terminal" }

# Phase 2 (SPEC-V3-002 T4/T5): arboard 3.0 로컬 클립보드
# (macOS NSPasteboard / Linux X11·Wayland, SPEC-V3-002 RG-V3-002-4).
arboard = "3.0"

# SPEC-V3-010 MS-1: agent dashboard domain crate
moai-studio-agent = { path = "../moai-studio-agent" }

# SPEC-V3-006 MS-1: Markdown 파싱 (RG-MV-1, pulldown-cmark)
pulldown-cmark = "0.13"

[dev-dependencies]
# T11 (SPEC-V3-003 MS-2 AC-P-19): tab_switch 50-cycle bench.
# criterion 0.5 는 harness=false 로 동작하며 --test 모드로 smoke-run 가능.
criterion = "0.5"

# T1 (SPEC-V3-004 MS-1 AC-R-6): gpui test-support feature 채택.
# USER-DECISION resolved: option (a) ADOPT. TestAppContext 기반 render integration test 활성화.
# AC-P-5 carry-over (SPEC-V3-003) 해소.
gpui = { version = "0.2", features = ["test-support"] }

[[example]]
name = "ghostty-spike"
path = "examples/ghostty_spike.rs"

[[bench]]
name = "tab_switch"
harness = false
