[package]
name = "moai-fs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
notify = "7"
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "test-util", "time"] }
tempfile = "3"
