[package]
name = "moai-hook-http"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["net", "sync", "rt"] }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
axum = { workspace = true, features = ["macros"] }
